<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:gravity="center" >

        <ImageView
            android:id="@+id/iv2d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:visibility="gone"
            />
        <EditText
            android:id="@+id/ed_str"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_content" >
            </TextView>

            <EditText
                android:id="@+id/etContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/please_input_content_to_generate_barcode" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_of_the_image" >
            </TextView>

            <EditText
                android:id="@+id/etContentHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/width_of_the_image" >
            </TextView>

            <EditText
                android:id="@+id/etContentWidth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|left" >

            <Button
                android:id="@+id/btnCreat1d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generate_barcode"
                android:textSize="15sp"
                />

            <Button
                android:id="@+id/btnCreat2d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generate_qrcode"
                android:textSize="15sp"
                />
            
            <Button
                android:id="@+id/btnCreatPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_image"
                android:textSize="15sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/magin_left" >
            </TextView>

            <EditText
                android:id="@+id/etMarginLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3" >
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/print_density" >
            </TextView>

            <EditText
                android:id="@+id/etConcentration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:text="50">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnPrintText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="print text" />
            <Button
                android:id="@+id/btnPrint"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="print pic" />
            
             <Button
                android:id="@+id/btnPrintMix"
               android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="print test" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>